--- a/product-info.html
+++ b/product-info.html
@@ -40,10 +40,8 @@
       </div> -->
       <div class="container">
         <div id="title"></div>
-        <div class="row">
-          <div id="carrusel" class="col-lg-8 col-sm-12"></div>
-          <div id="description" class="col-lg-4 col-sm-12"></div>
-        </div>
+        <div id="carrusel" ></div>
+        <div id="description" ></div>
  <!-- Comentarios -->
         <div class="container1 form-floating">
           <textarea
