Punto 2 y punto extra

--- a/cart.html
+++ b/cart.html
@@ -13,18 +13,13 @@
     />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- <link href="css/styles.css" rel="stylesheet" /> -->
-
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
     <link href="css/dark_mode.css" rel="stylesheet" />
     <link href="css/cart.css" rel="stylesheet" />
 
     <!-- font awesome -->
-    <script
-      src="https://kit.fontawesome.com/2919f68f3c.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
@@ -61,9 +56,7 @@
                   value="1"
                   required
                 />
-                <label class="dark_mode form-check-label" for="premium">
-                  Premium 2 a 5 días (15%)</label
-                >
+                <label class="dark_mode form-check-label" for="premium">Premium 2 a 5 días (15%)</label>
                 <br />
                 <input
                   class="form-check-input dark_mode"
@@ -73,9 +66,7 @@
                   value="2"
                   required
                 />
-                <label class="dark_mode form-check-label" for="express">
-                  Express 5 a 8 días (7%)</label
-                >
+                <label class="dark_mode form-check-label" for="express">Express 5 a 8 días (7%)</label>
                 <br />
                 <input
                   class="form-check-input dark_mode"
@@ -86,22 +77,13 @@
                   checked
                   required
                 />
-                <label class="dark_mode form-check-label" for="standard">
-                  Standard 12 a 15 días (5%)</label
-                >
+                <label class="dark_mode form-check-label" for="standard">Standard 12 a 15 días (5%)</label>
               </div>
               <h4 class="dark_mode">Direccion de envio</h4>
 
               <div class="mb-3">
-                <label for="select_departamento" class="form-label dark_mode"
-                  >Departamento:</label
-                >
-                <select
-                  id="select_departamento"
-                  class="form-select mb-3"
-                  required
-                  aria-label="Default select example"
-                >
+                <label for="select_departamento" class="form-label dark_mode">Departamento:</label>
+                <select id="select_departamento" class="form-select mb-3" required aria-label="Default select example">
                   <option value="Artigas">Artigas</option>
                   <option value="Canelones">Canelones</option>
                   <option value="Cerro Largo">Cerro Largo</option>
@@ -125,9 +107,7 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_calle" class="form-label dark_mode"
-                  >Calle:</label
-                >
+                <label for="input_calle" class="form-label dark_mode">Calle:</label>
                 <input
                   required
                   type="text"
@@ -139,9 +119,7 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_esquina" class="form-label dark_mode"
-                  >Esquina:</label
-                >
+                <label for="input_esquina" class="form-label dark_mode">Esquina:</label>
                 <input
                   required
                   type="text"
@@ -153,9 +131,7 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_numero_calle" class="form-label dark_mode"
-                  >Número:</label
-                >
+                <label for="input_numero_calle" class="form-label dark_mode">Número:</label>
                 <input
                   required
                   type="text"
@@ -299,17 +275,6 @@
                   Finalizar compra
                 </button>
               </div>
-
-              <style>
-                .alert-fade {
-                  opacity: 1;
-                  transition: opacity 1s ease;
-                }
-
-                .alert-fade.fade-out {
-                  opacity: 0;
-                }
-              </style>
 
               <div
                 id="alert_size"
