--- a/my-profile.html
+++ b/my-profile.html
@@ -16,22 +16,6 @@
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
     <link href="css/dark_mode.css" rel="stylesheet" />
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/2919f68f3c.js"
@@ -59,129 +43,104 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <main>
-            <div class="contenedor-inputs">
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >Primer Nombre*</span
-                >
-                <input
-                  id="first_name"
-                  type="text"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                  required
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >Segundo Nombre</span
-                >
-                <input
-                  id="second_name"
-                  type="text"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >Apellido*</span
-                >
-                <input
-                  id="first_lastname"
-                  type="text"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                  required
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >Segundo Apellido</span
-                >
-                <input
-                  id="second_lastname"
-                  type="text"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <label for="miInput"></label>
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >E-mail*</span
-                >
-
-                <input
-                  id="email"
-                  type="email"
-                  name="nombre"
-                  id="miInput"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                  required
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default"
-                  >Teléfono de contacto</span
-                >
-                <input
-                  id="phone_number"
-                  type="number"
-                  class="form-control"
-                  aria-label="Sizing example input"
-                  aria-describedby="inputGroup-sizing-default"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <div class="mb-3">
-                  <label for="formFile" class="form-label" id="pfp"
-                    >Elegir nueva foto de perfil</label
+            <form id="register-form" class="row g-3 needs-validation" novalidate>
+              <div class="contenedor-inputs">
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >Primer Nombre*</span
                   >
-                  <input class="form-control" type="file" id="formFile" />
+                  <input
+                    id="first_name"
+                    type="text"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                    required
+                  />
                 </div>
-              </div>
-
-              <button id="btn-guardar" type="button" class="btn btn-primary">
-                Guardar cambios
-              </button>
-            </div>
-            <!-- Este modal anda raro
-      <div class="input-group mb-3">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-          Launch demo modal
-        </button>
-    
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
+                <ul class="errores" id="error_nombre"></ul>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >Segundo Nombre</span
+                  >
+                  <input
+                    id="second_name"
+                    type="text"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                  />
+                </div>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >Apellido*</span
+                  >
+                  <input
+                    id="first_lastname"
+                    type="text"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                    required
+                  />
+                </div>
+                <ul class="errores" id="error_apellido"></ul>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >Segundo Apellido</span
+                  >
+                  <input
+                    id="second_lastname"
+                    type="text"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                  />
+                </div>
+                <div class="input-group mb-3">
+                  <label for="miInput"></label>
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >E-mail*</span
+                  >
+  
+                  <input
+                    id="email"
+                    type="email"
+                    name="nombre"
+                    id="miInput"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                    required
+                  />
+                </div>
+                <ul class="errores" id="error_email"></ul>
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="inputGroup-sizing-default"
+                    >Teléfono de contacto</span
+                  >
+                  <input
+                    id="phone_number"
+                    type="number"
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default"
+                  />
+                </div>
+                <div class="input-group mb-3">
+                  <div class="mb-3">
+                    <label for="formFile" class="form-label" id="pfp"
+                      >Elegir nueva foto de perfil</label
+                    >
+                    <input class="form-control" type="file" id="formFile" />
+                  </div>
+                </div>
+  
+                <button id="btn-guardar" type="submit" class="btn btn-primary">
+                  Guardar cambios
                 </button>
               </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-            <!-- </div> -->
-
-            <!-- </div> -->
+            </form>
           </main>
         </div>
       </div>
