--- a/product-info.html
+++ b/product-info.html
@@ -32,18 +32,12 @@
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main>
-      <!-- <div class="ful-img" id="fulImgBox">
-        <img src="img/car1.jpg" id="fulImg" />
-        <span id="closeSpan" onclick="closeImg()"
-          ><i class="fa-solid fa-circle-xmark"></i
-        ></span>
-      </div> -->
       <div class="container">
         <div id="title"></div>
         <div id="carrusel" ></div>
         <div id="description" ></div>
  <!-- Comentarios -->
-        <div class="container1 form-floating">
+        <div id="comentarios-mobile" class="container1 form-floating">
           <textarea
             name="comentarios"
             class="form-control centered-textarea"
