Login y registro en la carpeta root

--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <title>Login</title>
 
     <!-- Estilos Franco -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style-index.css" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/login.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -35,7 +35,7 @@
             </div>
             <div class="recordarme">
               <label><input type="checkbox" />Recordar usuario</label><br>
-              <a href="password.html">Olvidaste tu contraseña?</a>
+              <a href="./password.html">Olvidaste tu contraseña?</a>
             </div>
             <button type="submit" class="boton-login" onsubmit="redirect()">
               Ingresar
@@ -43,13 +43,13 @@
             <div class="registrarse">
               <p>
                 No tienes una cuenta?
-                <a href="register.html">Regístrate aquí.</a>
+                <a href="./register.html">Regístrate aquí.</a>
               </p>
             </div>
           </form>
         </div>
       </div>
     </main>
-    <script src="./login.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
