--- a/password.html
+++ b/password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar contraseña</title>
-    <link rel="stylesheet" href="style-index2.css">
+    <link rel="stylesheet" href="./css/password.css">
 </head>
 <body>
     <div class="contenedor-recuperar">
