--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regístrate!</title>
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="./css/register.css" />
   </head>
   <body>
     <div class="contenedor-register">
@@ -50,6 +50,6 @@
         </div>
       </form>
     </div>
-    <script src="./register.js"></script>
+    <script src="./js/register.js"></script>
   </body>
 </html>
