Borramos el css local y lo reemplazamos con el CDN

--- a/register.html
+++ b/register.html
@@ -37,8 +37,8 @@
         </div>
         <div class="checkbox-terminos">
           <label
-            ><input id="checkbox-de-terminos" type="checkbox" />Acepto
-            los términos y condiciones del servicio.</label
+            ><input id="checkbox-de-terminos" type="checkbox" />Acepto los
+            términos y condiciones del servicio.</label
           >
         </div>
         <ul class="errores" id="error_checkbox"></ul>
