--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     />
     <title>eMercado - Todo lo que busques está aquí</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <link href="css/dark_mode.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
-    <link href="css/navbar.css" rel="stylesheet" />
-    <link href="css/footer.css" rel="stylesheet" />
+
+    <!-- Nuestro cscs hecho -->
+    <link href="./css/navbar.css" rel="stylesheet" />
+    <link href="./css/dark_mode.css" rel="stylesheet" />
+    <link href="./css/index.css" rel="stylesheet" />
+    <link href="./css/footer.css" rel="stylesheet" />
 
     <!-- font awesome -->
     <script
@@ -91,11 +95,16 @@
     </main>
     <footer class="text-muted dark_mode"></footer>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    
+    <!-- nuestro js -->
     <script src="js/index.js"></script>
     <script src="js/init.js"></script>
     <script src="js/validarUsuario.js"></script>
     <script src="./navbar.js"></script>
     <script src="./footer.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
   </body>
 </html>
