--- a/my-profile.html
+++ b/my-profile.html
@@ -7,11 +7,22 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>eMercado - Todo lo que busques está aquí</title>
+
+    <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <!-- Css -->
     <link href="css/my-profile.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
@@ -21,6 +32,7 @@
       src="https://kit.fontawesome.com/2919f68f3c.js"
       crossorigin="anonymous"
     ></script>
+    
   </head>
 
   <body class="dark_mode">
@@ -43,7 +55,11 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <main>
-            <form id="register-form" class="row g-3 needs-validation" novalidate>
+            <form
+              id="register-form"
+              class="row g-3 needs-validation"
+              novalidate
+            >
               <div class="contenedor-inputs">
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="inputGroup-sizing-default"
@@ -102,7 +118,7 @@
                   <span class="input-group-text" id="inputGroup-sizing-default"
                     >E-mail*</span
                   >
-  
+
                   <input
                     id="email"
                     type="email"
@@ -135,7 +151,7 @@
                     <input class="form-control" type="file" id="formFile" />
                   </div>
                 </div>
-  
+
                 <button id="btn-guardar" type="submit" class="btn btn-primary">
                   Guardar cambios
                 </button>
@@ -146,7 +162,11 @@
       </div>
     </div>
     <footer class="text-muted"></footer>
-    <script src="js/bootstrap.bundle.min.js"></script>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- Nuestro javascript -->
     <script src="js/init.js"></script>
     <script src="./navbar.js"></script>
     <script src="./footer.js"></script>
