--- a/products.html
+++ b/products.html
@@ -10,17 +10,23 @@
 
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Font awesome -->
     <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
+
+    <!-- Nuestro css -->
+    <link href="./css/productos.css"  rel="stylesheet" >
     <link href="css/dark_mode.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/productos.css">
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
     
-     <!-- font awesome -->
-     <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
 
   <body class="dark_mode">
@@ -79,7 +85,10 @@
       </div>
     </div>
     
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- Javascript -->
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
     <script src="js/validarUsuario.js"></script>
