--- a/sell.html
+++ b/sell.html
@@ -7,16 +7,23 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>eMercado - Todo lo que busques está aquí</title>
+
+    <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- nuestro CSS -->
     <link href="css/dropzone.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
     <link href="./css/dark_mode.css" rel="stylesheet" />
+
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/2919f68f3c.js"
@@ -286,7 +293,11 @@
         <div></div>
       </div>
     </div>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- Nuestro JS -->
     <script src="js/dropzone.js"></script>
     <script src="js/init.js"></script>
     <script src="js/sell.js"></script>
