--- a/nosotros.html
+++ b/nosotros.html
@@ -4,127 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/nosotros-style.css">
+    
+
+      <!-- Bootstrap -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
+    <!-- Nuestro CSS -->
+    <link href="css/dark_mode.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
+    <link href="css/nosotros-style.css" rel="stylesheet" >
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
      <!-- font awesome -->
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="dark_mode">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <div class="conteiner">
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Nahuel<br><span>Prueba2</span></h2>
-                </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/Nahuel.jpg" alt="nahuel">
             </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Federico<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Franco<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Hernan<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Camila<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Chiara<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Gaston<br><span>Prueba2</span></h2>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgBx">
-                    <img src="blank-profile-picture-973460_960_720.webp" alt="">
-                </div>
-                <ul class="socail-icon">
-                    <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <div class="details">
-                    <h2>Ignacio<br><span>Prueba2</span></h2>
-                </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/nahuelbonifacino"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Nahuel<br><span>Prueba2</span></h2>
             </div>
         </div>
-</body>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/Yo_2023.jpg" alt="federico">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/trottafede"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Federico<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/Franco.jpg" alt="franco">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/francocantarelli"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Franco<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/hernan.jpg" alt="hernan">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/hqt4n"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Hernan<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/camila.jpg" alt="camila">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/camilabanizi"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Camila<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/chiara.jpg" alt="chiara">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="https://github.com/chiaracorrea"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Chiara<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/gaston.jpg" alt="gaston">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Gaston<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        <div class="box">
+            <div class="imgBx">
+                <img src="./img/Nosotros/Ignacio.jpg" alt="ignacio">
+            </div>
+            <ul class="socail-icon">
+                <li><a target="_blank" href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-google" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+            <div class="details">
+                <h2>Ignacio<br><span>Prueba2</span></h2>
+            </div>
+        </div>
+        </div>
+
+        <!-- Nuestro JS -->
+        <script src="./navbar.js"></script>
+        <script src="./js/validarUsuario.js"></script>
+        
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </body>
 </html>
