--- a/product-info.html
+++ b/product-info.html
@@ -39,10 +39,16 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main>
       <div class="container">
-        <div id="title"></div>
-        <div id="carrusel" ></div>
-        <div id="description" ></div>
- <!-- Comentarios -->
+        <div id="producto">
+          <div id="title"></div>
+          <div class="row">
+            <div id="carrusel" class="col-lg-8"></div>
+            <div id="description" class="col-lg-4"></div>
+          </div>
+        </div>
+        
+      <!-- Comentarios -->
+      <div id="comments-seccion">
         <div id="comentarios-mobile" class="container1 form-floating">
           <textarea
             name="comentarios"
@@ -72,7 +78,7 @@
           </button>
         </div>
         <div class="accordion" id="comments"></div>
-
+      </div>
 
         <!-- Puntuacion -->
 
