factura en carrito, y product info

--- a/product-info.html
+++ b/product-info.html
@@ -50,13 +50,7 @@
       <!-- Comentarios -->
       <div id="comments-seccion">
         <div id="comentarios-mobile" class="container1 form-floating">
-          <textarea
-            name="comentarios"
-            class="form-control centered-textarea"
-            placeholder="Ingrese aquí su comentario"
-            id="btnComent"
-            style="height: 100px"
-          ></textarea>
+          <textarea name="comentarios" class="form-control centered-textarea" placeholder="Ingrese aquí su comentario" id="btnComent" style="height: 100px"></textarea>
           <label for="floatingTextarea2">Comentario: </label>
           <div class="">
             <div class="rating">
