--- a/cart.html
+++ b/cart.html
@@ -24,6 +24,12 @@
 
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
+
+    <!-- jsPDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+
+
   </head>
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
@@ -314,10 +320,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <!-- Nuestro JS -->
-    <script src="js/init.js"></script>
-    <script src="js/cart.js"></script>
-    <script src="js/validarUsuario.js"></script>
+    <script src="./js/init.js"></script>
+    <script src="./js/cart.js"></script>
+    <script src="./js/validarUsuario.js"></script>
     <script src="./navbar.js"></script>
     <script src="./footer.js"></script>
+    <script src="./js/jspdf.min.js"></script>
+    <script src="./js/generatePDF.js"></script>
   </body>
 </html>
