--- a/product-info.html
+++ b/product-info.html
@@ -48,9 +48,9 @@
         </div>
         
       <!-- Comentarios -->
-      <div id="comments-seccion">
-        <div id="comentarios-mobile" class="container1 form-floating">
-          <textarea name="comentarios" class="form-control centered-textarea" placeholder="Ingrese aquí su comentario" id="btnComent" style="height: 100px"></textarea>
+      <div id="comments-seccion" class="row">
+        <div id="comentarios-mobile" class=" form-floating col-md-6 col-sm-12">
+          <textarea name="comentarios" class="form-control centered-textarea" placeholder="Ingrese aquí su comentario" id="btnComent" style="height: 200px"></textarea>
           <label for="floatingTextarea2">Comentario: </label>
           <div class="">
             <div class="rating">
@@ -71,7 +71,7 @@
             Enviar comentario
           </button>
         </div>
-        <div class="accordion" id="comments"></div>
+        <div id="comments" class="col-md-6 col-sm-12" ></div>
       </div>
 
         <!-- Puntuacion -->
