--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,11 @@
 </head>
 <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
-    <div class="conteiner">
+    <div class="container">
+ <div class="row">
+
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/Nahuel.jpg" alt="nahuel">
@@ -37,6 +41,9 @@
                 <h2>Nahuel<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/Yo_2023.jpg" alt="federico">
@@ -51,6 +58,9 @@
                 <h2>Federico<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/Franco.jpg" alt="franco">
@@ -65,6 +75,9 @@
                 <h2>Franco<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/hernan.jpg" alt="hernan">
@@ -79,6 +92,9 @@
                 <h2>Hernan<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/camila.jpg" alt="camila">
@@ -93,6 +109,9 @@
                 <h2>Camila<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/chiara.jpg" alt="chiara">
@@ -107,6 +126,9 @@
                 <h2>Chiara<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/gaston.jpg" alt="gaston">
@@ -121,6 +143,9 @@
                 <h2>Gaston<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+    <div class="col-xl-3 col-lg-4 col">
         <div class="box">
             <div class="imgBx">
                 <img src="./img/Nosotros/Ignacio.jpg" alt="ignacio">
@@ -135,6 +160,11 @@
                 <h2>Ignacio<br><span>Prueba2</span></h2>
             </div>
         </div>
+    </div>
+
+
+
+ </div>
         </div>
 
         <!-- Nuestro JS -->
